# Active-learning-in-microscopy

./: .gitignore  README.md  pyproject.toml
apply_nb/: SPM_Phase_data_GP_&_sGP.ipynb  SPM_Phase_data_GP_and_sGP.ipynb  STEM_EELS_SI_SVDKL_single_obj.ipynb
apply_nb/richard-mobo/: MOBO_DKL_RL_dev.ipynb
data/: phases.txt  phases_masked.txt
notebooks/: 0_getting_started_BI-GP.ipynb  0_gp_posterior_function_sampling_botorch.ipynb  0b_getting_started_BI-sGP.ipynb  1_BI-noGP.ipynb  Beacon-combi-library.ipynb  GP_&_sGP_BO_BoTorch.ipynb  GP_&_sGP_beyond_1D.ipynb  MultiFidelity(MultiTask)_GPyTorch.ipynb  Tuning-aberrations-STEM.ipynb  Tuning_aberrations_STEM.ipynb  multi_objective_BO_SVDKL.ipynb  single_objective_BO_SVDKL-MU_UCB-high-beta.ipynb  single_objective_BO_SVDKL-novelty-search.ipynb  single_objective_BO_SVDKL.ipynb  single_objective_BO_SVDKL_stem-edx-novelty-search.ipynb  single_objective_BO_SVDKL_stem-edx.ipynb  single_objective_BO_SVDKL_stem-eels-MU_UCB-high-beta.ipynb  single_objective_BO_SVDKL_stem-eels-novelty-search.ipynb  single_objective_BO_SVDKL_stem-eels.ipynb  single_objective_BO_SVDKL_stem_v2.ipynb
notebooks/beacon-dkl/: README.md
notebooks/beacon-dkl-plots/: data-postprocess-for-beacon.ipynb
notebooks/beacon-dkl/notebooks/On_live_instrument/: DKL-BEACON-stem-edx-live-mic.ipynb  Postprocess-and-generate-plots.ipynb
notebooks/beacon-dkl/notebooks/On_preacq_data/: DKL-BEACON-pfm.ipynb  DKL-BEACON-stem-eels.ipynb  DKL-EI-pfm.ipynb  DKL-EI-stem-eels.ipynb  DKL-MU-UCB-pfm.ipynb  DKL-MU-UCB-stem-eels.ipynb  Postprocess-and-generate-plots.ipynb
(+18 files in other folders)
