[project]
name = "active-learning-in-microscopy"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "botorch==0.12.0",
    "dtmicroscope",
    "gpytorch==1.13",
    "h5py>=3.15.1",
    "ipykernel>=7.2.0",
    "pyro5>=5.16",
    "pytemlib>=0.2026.1.3",
    "scifireaders>=0.12.4",
    "sidpy>=0.12.8",
]

[tool.uv.sources]
dtmicroscope = { git = "https://github.com/pycroscopy/DTMicroscope.git", rev = "3a7dcb0345db7dc56e82106593ec2cbe151dbd53" }
